<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/animation"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/file_name"
        android:layout_width="196dp"
        android:layout_height="44dp"
        android:layout_marginStart="68dp"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/download_status"
        android:layout_width="198dp"
        android:layout_height="61dp"
        app:layout_constraintBottom_toTopOf="@id/button_ok"
        app:layout_constraintEnd_toEndOf="@+id/file_name_id"
        app:layout_constraintStart_toStartOf="@+id/file_name"
        app:layout_constraintTop_toBottomOf="@+id/file_name" />


<!--    swipe ok button from left to write TO START THE ANIMATION -->
    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="224dp"
        android:text="@string/button_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/file_name"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toTopOf="@+id/status_name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/file_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="81dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:text="@string/status"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBaseline_toBaselineOf="@+id/download_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/download_status" />


</androidx.constraintlayout.motion.widget.MotionLayout>